# howstrumpdoing

./: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  wrangler.toml
journalism_ai/: .gitignore  README.md  pyproject.toml
journalism_ai/db/: chroma.sqlite3
journalism_ai/src/journalism_ai/: crew.py  drawing_style.txt  main.py
journalism_ai/src/journalism_ai/config/: agents.yaml  tasks.v2.yaml  tasks.yaml
src/components/: article.tsx  indicator_card.tsx  layout.tsx  legislation_card.tsx  line_chart.tsx
src/lib/: fred.ts  sanity.ts
src/pages/: [slug].tsx  _app.tsx  _document.tsx  article.tsx  index.tsx  mission.tsx
src/styles/: globals.css
