[project]
name = "journalism_ai"
version = "0.2.0"
description = "journalism-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
journalism_ai = "journalism_ai.main:run"
run_crew = "journalism_ai.main:run"
train = "journalism_ai.main:train"
replay = "journalism_ai.main:replay"
test = "journalism_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
